--- a/environment.yml
+++ b/environment.yml
@@ -1,42 +1,21 @@
-name: root
-channels:
-  - conda-forge
-  - defaults
+name: pyhep-coffea
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - asn1crypto=1.2.0=py37_0
-  - ca-certificates=2020.6.20=hecda079_0
-  - certifi=2020.6.20=py37hc8dfbb8_0
-  - cffi=1.13.0=py37h2e261b9_0
-  - chardet=3.0.4=py37_1003
-  - conda=4.7.12=py37_0
-  - conda-package-handling=1.6.0=py37h7b6447c_0
-  - cryptography=2.8=py37h1ba5d50_0
-  - idna=2.8=py37_0
-  - libedit=3.1.20181209=hc058e9b_0
-  - libffi=3.2.1=hd88cf55_4
-  - libgcc-ng=9.1.0=hdf63c60_0
-  - libstdcxx-ng=9.1.0=hdf63c60_0
-  - ncurses=6.1=he6710b0_1
-  - openssl=1.1.1g=h516909a_0
-  - pip=19.3.1=py37_0
-  - pycosat=0.6.3=py37h14c3975_0
-  - pycparser=2.19=py37_0
-  - pyopenssl=19.0.0=py37_0
-  - pysocks=1.7.1=py37_0
-  - python=3.7.4=h265db76_1
-  - python_abi=3.7=1_cp37m
-  - readline=7.0=h7b6447c_5
-  - requests=2.22.0=py37_0
-  - ruamel_yaml=0.15.46=py37h14c3975_0
-  - setuptools=41.4.0=py37_0
-  - six=1.12.0=py37_0
-  - sqlite=3.30.0=h7b6447c_0
-  - tk=8.6.8=hbc83047_0
-  - tqdm=4.36.1=py_0
-  - urllib3=1.24.2=py37_0
-  - wheel=0.33.6=py37_0
-  - xz=5.2.4=h14c3975_4
-  - yaml=0.1.7=had09818_2
-  - zlib=1.2.11=h7b6447c_3
-prefix: /srv/conda
+  - conda-forge::pyxrootd
+  - awkward=0.12.20
+  - matplotlib=3
+  - setuptools
+  - llvmlite
+  - numba=0.43.1
+  - numpy=1.16.0
+  - scipy=1.1.0
+  - uproot-methods=0.7.3
+  - uproot=3.11.0
+  - futures; python_version="2.7"
+  - tqdm=4.27.0
+  - lz4
+  - six
+  - cloudpickle
+  - mplhep=0.1.18
+  - packaging
+  - ipywidgets
+  - pandas
