playing with env again

--- a/environment.yml
+++ b/environment.yml
@@ -1,6 +1,5 @@
 name: pyhep-coffea
 dependencies:
-  - coffea=0.6.40
   - awkward=0.12.20
   - matplotlib=3
   - setuptools
@@ -18,3 +17,4 @@ dependencies:
   - packaging
   - ipywidgets
   - pandas
+  - pip::coffea=0.6.40
